[DS-707] Try to use cached instances of boxed primitives.
git-svn-id: http://scm.dspace.org/svn/repo/dspace/trunk@5493 9c30dcfa-912a-0410-8fc2-9e0234be79fd