@@ -402,7 +402,7 @@ public class BrowseCreateDAOOracle implements BrowseCreateDAO
     {
         try
         {
-            Object[] params = { new Integer(itemID) };
+            Object[] params = { Integer.valueOf(itemID) };
             String dquery = "DELETE FROM " + table + " WHERE item_id=?";
             DatabaseManager.updateQuery(context, dquery, params);
         }
@@ -422,7 +422,7 @@ public class BrowseCreateDAOOracle implements BrowseCreateDAO
     {
         try
         {
-            Object[] params = { new Integer(itemID) };
+            Object[] params = { Integer.valueOf(itemID) };
             String dquery = "DELETE FROM Communities2Item WHERE item_id = ?";
             DatabaseManager.updateQuery(context, dquery, params);
         }
